--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/express": "^4.16.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^7.0.0",
     "express": "~4.16.0",
     "express-handlebars": "^3.0.2",
     "hbs": "~4.0.1",
